# bring-the-village-back

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Procfile  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/community/: admin.py  models.py  urls.py  views.py
backend/community/migrations/: 0001_initial.py
backend/core/: exceptions.py  middleware.py  urls.py  views.py
backend/donations/: admin.py  models.py  urls.py  views.py
backend/donations/migrations/: 0001_initial.py
backend/feedback/: admin.py  ai_triage.py  models.py  urls.py  views.py
backend/feedback/migrations/: 0001_initial.py
backend/matching/: admin.py  engine.py  models.py  serializers.py  urls.py  views.py
backend/matching/migrations/: 0001_initial.py
backend/messaging/: admin.py  models.py  urls.py  views.py
backend/messaging/migrations/: 0001_initial.py
backend/tests/: conftest.py  locustfile.py  test_accounts.py  test_feedback.py  test_health.py  test_matching.py  test_messaging.py  test_models.py  test_timebank.py  test_waitlist.py
backend/timebank/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/timebank/migrations/: 0001_initial.py
backend/village/: asgi.py  settings.py  urls.py  wsgi.py
backend/waitlist/: admin.py  models.py  serializers.py  urls.py  views.py
backend/waitlist/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+28 files in other folders)
